--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -113,6 +113,10 @@ main {
     margin: 0px auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     border-radius: 10px;
@@ -138,7 +142,7 @@ main {
 
 .about-info {
     text-align: center;
-   
+
 }
 
 .info-title {
@@ -160,6 +164,91 @@ main {
     font-weight: 700;
     line-height: 30px;
 }
-#what-i-do-des{
+
+/* what i do/ skill */
+#what-i-do-des {
     padding: 30px 50px;
+}
+
+.skill-section {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-container {
+    display: flex;
+    gap: 70px;
+}
+
+.resume-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.resume-institution {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+
+.resume-title {
+    color: var(--Dark-02, #474747);
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.resume-container hr {
+    margin: 30px 0px;
+}
+
+.download-cv {
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* footer section */
+footer {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    margin-top: 130px;
+    padding: 130px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.footer-column input[type="text"],
+.footer-column input[type="email"],
+textarea {
+    margin-bottom: 24px;
+    color: #757575;
+    padding: 18px 35px;
+    display: block;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0px;
+    width: 75%;
+    font-size: 20px;
+    font-weight: 600;
+
 }
